--- a/package.json
+++ b/package.json
@@ -6,20 +6,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "primeflex": "^3.2.1",
-    "primeicons": "^6.0.1",
-    "primereact": "^8.7.0",
+    "bootstrap": "^5.2.2",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "react-transition-group": "^4.4.5",
     "web-vitals": "^2.1.4"
   },
   "homepage": "http://digitalnobsx.github.io/links-task",
-  
   "scripts": {
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
